@@ -8,6 +8,6 @@
 	<classpathentry kind="lib" path="lib/commons-io-1.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/bias-0.5.jar"/>
 	<classpathentry kind="lib" path="lib/liquidlnf.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar" sourcepath="C:/projs/apache-log4j-1.2.15/apache-log4j-1.2.15/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
