@@ -1,4 +1,4 @@
-Logger
+	Logger
 Configuration saving: file locations
 	Selection of look and feel - not implemented
 Better about panel
