@@ -1,1 +1,1 @@
-jvdrums.version = 1.0_alpha-1
+jvdrums.version = 1.0_alpha-2
