@@ -1,5 +1,5 @@
 Manifest-Version: 0.5
-Class-Path: lib/liquidlnf.jar lib/bias-0.5.jar lib/commons-io-1.3.2.jar lib/commons-lang-2.3.jar
+Class-Path: lib/log4j-1.2.15.jar lib/liquidlnf.jar lib/bias-0.5.jar lib/commons-io-1.3.2.jar lib/commons-lang-2.3.jar
 Built-By: Eyal Golan - egolan74@gmail.com
 Main-Class: jvdrums.JVDrumsApp
 Sealed: true
