@@ -1,1 +1,1 @@
-java -classpath .;./lib/liquidlnf.jar;./lib/bias-0.5.jar;./lib/commons-io-1.3.2.jar;./lib/commons-lang-2.3.jar jvdrums.JVDrumsApp
+java -classpath .;./lib/log4j-1.2.15.jar;./lib/liquidlnf.jar;./lib/bias-0.5.jar;./lib/commons-io-1.3.2.jar;./lib/commons-lang-2.3.jar jvdrums.JVDrumsApp
