@@ -48,3 +48,4 @@ Release 1.0 alpha-1
 
 * Keeping last browse and save last locations
 * Keeping MIDI configuration
+* Added logger
